--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,6 @@ CodeCoverage/
 *.VisualState.xml
 TestResult.xml
 nunit-*.xml
+/WeatherApp/.vs/WeatherApp/CopilotIndices/17.14.1577.30250
+/WeatherApp/.vs/WeatherApp/FileContentIndex
+/WeatherApp/.vs/WeatherApp/v17
