Refactor API: contracts, middleware, and clean architecture
- Add API contract records for requests, responses, and errors
- Refactor WeatherController to use contracts and IWeatherService
- Implement simulated failure middleware for /weather endpoint
- Register Application/Infrastructure layers and update DI
- Enhance Swagger docs and customize UI
- Add OpenWeatherMap config to appsettings.json
- Reference Application and Infrastructure projects for DI
- Make Program partial for integration testing

--- a/WeatherApp/WeatherApp.Api/WeatherApp.Api.csproj
+++ b/WeatherApp/WeatherApp.Api/WeatherApp.Api.csproj
@@ -4,10 +4,16 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>6ec95d28-76b6-47c3-b97e-59acc7a95205</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\WeatherApp.Application\WeatherApp.Application.csproj" />
+    <ProjectReference Include="..\WeatherApp.Infrastructure\WeatherApp.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
