--- a/WeatherApp/WeatherApp.Api/appsettings.json
+++ b/WeatherApp/WeatherApp.Api/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "OpenWeatherMap": {
+    "ApiKey": "Use from user secret",
+    "BaseUrl": "https://api.openweathermap.org/data/2.5/weather",
+    "TimeoutSeconds": 30
+  }
 }
