Organize projects under src folder and update .gitignore
Added a "src" solution folder in WeatherApp.sln and nested all main projects under it for better structure. Updated .gitignore to exclude the CodeCoverage/ directory.

--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,4 @@ nunit-*.xml
 /WeatherApp/.vs/WeatherApp/CopilotIndices/17.14.1577.30250
 /WeatherApp/.vs/WeatherApp/FileContentIndex
 /WeatherApp/.vs/WeatherApp/v17
+/WeatherApp/.vs/WeatherApp/copilot-chat/ce2ae7a8/sessions
