Add React weather client & update project configs
Introduced a new React + TypeScript weather client app for Wellington, including all foundational source files, UI components, and configuration for Vite, ESLint, and TypeScript. Added supporting CSS for a modern, responsive UI. Updated project system files (`weatherapp.strings.v9.bin`) to reflect the current solution structure, build settings, and dependencies for all WeatherApp projects. Added a new `applicationhost.config` for IIS Express with default web server settings. No direct backend code changes were made.

--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,4 @@ nunit-*.xml
 /WeatherApp/.vs/WeatherApp/FileContentIndex
 /WeatherApp/.vs/WeatherApp/v17
 /WeatherApp/.vs/WeatherApp/copilot-chat/ce2ae7a8/sessions
+/WeatherApp/weather-client/node_modules
